[package]
name = "cargo-build-sbpf"
version = "0.1.0"
edition = "2021"
description = "Cargo subcommand for building SBPF programs with upstream nightly Rust"
license = "MIT OR Apache-2.0"

[[bin]]
name = "cargo-build-sbpf"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.5", features = ["derive"] }
guppy = "0.17.26"
toml_edit = "0.22"
which = "8.0.4"
